codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_provenance_goal_constrained.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                          "
"› Ask Codex to do anything                                                "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"  workspace/main  Pursuing goal (40K / 50K) · feature/robustness@0.144.1  "
